# N-Puzzle-DQN

./: .gitignore  GPU_test.py  LICENSE  README.md  Replay_Buffer.py  pyproject.toml  requirements.txt  setup.sh
src/: DQNAgent.py  Environment.py  Evaluate.py  Puzzle_Solver.py  Training_Loop.py
training/training_8_puzzle_250_nodes/: .weights.h5
